syntax = "proto3";

package account.info;

service AccountInfo {
  rpc Create(IAccountInfo) returns (AccountInfoCreateResponse);
  rpc Read(AccountInfoReadRequest) returns (AccountInfoReadResponse);
}

message IAccountInfoParent {
  optional string id = 1;                  // Document ID (_id in MongoDB)
  optional string credential = 2;          // Preference ObjectId (as string)
  optional string info = 3;          // Preference ObjectId (as string)
}

// Defining the AccountInfo message based on the IAccountInfo model
message IAccountInfo {
  optional string id = 1;                  // Document ID (_id in MongoDB)
  optional string preference = 2;          // Preference ObjectId (as string)
  optional IAccountInfoParent parent = 3;              // Parent ObjectId (as string)
  string firstName = 4;          // First name as string
  optional string lastName = 5;           // Last name as string
}

// The response message containing an AccountInfo
message AccountInfoReadRequest {

}

message AccountInfoCreateResponse {
  bool status = 1;
  int64 code = 2;
  string msg = 3;
  IAccountInfo data = 4;
}

message AccountInfoReadResponse {
  bool status = 1;
  int64 code = 2;
  string msg = 3;
  repeated IAccountInfo data = 4;
}